# data-structrures-and-algorithms-in-C

1_2doublellinkedlist/: CMakeLists.txt  main.c
1_linkedlist/: CMakeLists.txt  main.c
2_2arraystack/: CMakeLists.txt  main.c
2_liststack/: CMakeLists.txt  main.c
3_arrayqueue/: CMakeLists.txt  main.c
4_tree/: CMakeLists.txt  test.c
4_tree/include/: arrayqueue.h  defineType.h  searchTree.h
4_tree/src/: main.c  searchTree.c
5_avlTree/: CMakeLists.txt
5_avlTree/include/: avltree.h  defineType.h
5_avlTree/src/: avltree.c  main.c
6_rbTree/: CMakeLists.txt
6_rbTree/include/: arrayqueue.h  defineType.h  rbtree.h
6_rbTree/src/: arrayqueue.c  main.c  rbtree.c
7_binary_heap/: CMakeLists.txt
7_binary_heap/include/: bheap.h  defineType.h
7_binary_heap/src/: bheap.c  main.c
8_hash_map/: CMakeLists.txt  hashtable_quad.c
8_hash_map/include/: utils.h
8_hash_map/src/: utils.c
sortPart/: CMakeLists.txt  main.c
